[gd_scene load_steps=3 format=3 uid="uid://co3dgma00a4uj"]

[ext_resource type="Script" path="res://entities/dropped_item/dropped_item.gd" id="1_ort54"]

[sub_resource type="CircleShape2D" id="CircleShape2D_deaux"]
radius = 64.0

[node name="DroppedItem" type="Sprite2D"]
script = ExtResource("1_ort54")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_deaux")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
